--- a/click-counter-javascript/index.html
+++ b/click-counter-javascript/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Clicks counter</title>
+    <title>Activity Tracker</title>
 </head>
 <body>
     <div class="counter">
         <p>Click: <span id="count">0</span></p>
-        <button id="increment">Increase</button>
-        <button id="reset">Restart</button>
+        <button id="increment"> + </button>
+        <button id="reset"> 0 </button>
     </div>
     <script src="script.js"></script>
 </body>
